Añadido el login

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_ADMIN_TOKEN=ABC123
+VITE_ADMIN_TOKEN=7H01xm76Apke8ypfu5oASj1B80xknKq17XQ9abzGv1pMNbFH0e
 VITE_MAKE_WEBHOOK_DAILY=https://hook.make.com/tu_webhook_para_daily
 VITE_MAKE_WEBHOOK_WEEKEND=https://hook.make.com/tu_webhook_para_weekend
