--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "netlify-dev": "netlify dev",               
-    "deploy": "netlify deploy --prod"           
+    "netlify-dev": "netlify dev",
+    "deploy": "netlify deploy --prod"
   },
   "dependencies": {
     "@octokit/rest": "^22.0.0",
+    "fireworks-js": "^2.10.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,7 +28,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "netlify-cli": "^19.0.0",                   
+    "netlify-cli": "^19.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
